version/0.20/_sources/api/solver/_autosummary/settings/thermal_conductivity_2.rst.txt
:orphan:

.. _thermal_conductivity_2:

thermal_conductivity
====================

.. autoclass:: ansys.fluent.core.solver.settings_241.thermal_conductivity_2.thermal_conductivity
    :show-inheritance:

.. rubric:: Attributes

====================================================   ============================================================

Attribute                                                                                                   Summary

====================================================   ============================================================
:ref:`option <option_7>`                                           Select method for calculating material property.

:ref:`value <value_3>`                                                         Specify the constant property value.

:ref:`piecewise_linear <piecewise_linear_1>`               Specify ranges and values for piecewise-linear property.

:ref:`piecewise_polynomial <piecewise_polynomial>`                           Specify piecewise-polynomial settings.

:ref:`polynomial <polynomial_1>`                                                   Specify polynomial coefficients.

:ref:`expression <expression>`                                         Specify the property value as an expression.

:ref:`user_defined_function <user_defined_function>`                                 'user_defined_function' child.

:ref:`real_gas_nist_mixture <real_gas_nist_mixture>`                                 'real_gas_nist_mixture' child.

====================================================   ============================================================

.. rubric:: Included in:

====================================   ===================================

Parent                                                             Summary

====================================   ===================================
:ref:`mixture_child <mixture_child>`       'child_object_type' of mixture.

====================================   ===================================

