version/0.25/_sources/api/solver/_autosummary/settings/thermal_conductivity_2.rst.txt
:orphan:

.. _thermal_conductivity_2:

thermal_conductivity
====================

.. autoclass:: ansys.fluent.core.generated.solver.settings_242.thermal_conductivity_2.thermal_conductivity
    :show-inheritance:

.. rubric:: Attributes

====================================================   ============================================================

Attribute                                                                                                   Summary

====================================================   ============================================================
:ref:`option <option_12>`                                          Select method for calculating material property.

:ref:`value <value_11>`                                                        Specify the constant property value.

:ref:`piecewise_linear <piecewise_linear_2>`               Specify ranges and values for piecewise-linear property.

:ref:`piecewise_polynomial <piecewise_polynomial>`                                   Piecewise polynomial settings.

:ref:`polynomial <polynomial_2>`                                                               Polynomial settings.

:ref:`expression <expression>`                                         Specify the property value as an expression.

:ref:`biaxial <biaxial>`                                                 Biaxial orthotropic conductivity settings.

:ref:`cyl_orthotropic <cyl_orthotropic_1>`                           Cylindrical orthotropic conductivity settings.

:ref:`orthotropic <orthotropic_1>`                                               Orthotropic conductivity settings.

:ref:`principal_axes_values <principal_axes_values>`                                 'principal_axes_values' child.

:ref:`anisotropic <anisotropic_2>`                                   Anisotropic orthotropic conductivity settings.

:ref:`user_defined_function <user_defined_function>`                                 Specify user defined function.

====================================================   ============================================================

.. rubric:: Included in:

================================   =================================

Parent                                                       Summary

================================   =================================
:ref:`solid_child <solid_child>`       'child_object_type' of solid.

================================   =================================

